# Projecr

./: CMakeLists.txt  gitignore  topproject.sln
Debug/: Library.lib  googletest.lib  testLibrary.ilk  topproject.ilk
googletest/: ReadMe.txt  googletest.vcxproj  googletest.vcxproj.filters
googletest/Debug/: vc120.idb
googletest/Debug/googletest.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
ipch/googletest-5d07b8dc/: googletest-ac1df3a9.ipch
ipch/library-9479ff55/: library-4044d7c1.ipch
ipch/library-bdc498ec/: library-4044d7c1.ipch
test/: ReadMe.txt  test.vcxproj  test.vcxproj.filters
testLibrary/: testLibrary.vcxproj  testLibrary.vcxproj.filters  testlib.cpp
testLibrary/Debug/: testLibrary.vcxprojResolveAssemblyReference.cache  vc120.idb
testLibrary/Debug/testLibrary.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
topproject/: CMakeLists.txt  main.cpp  topproject.vcxproj
topproject/Debug/: vc120.idb
topproject/Debug/topproject.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  topproject.lastbuildstate
unittest_SimpleMath/: test.cpp  unittest_SimpleMath.cpp  unittest_SimpleMath.vcxproj
